<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_cameras_tips">请开启相机权限，开启后即可开始拍摄。</string>
    <string name="access_file_connect_box_tips">请开启位置权限以连接箱体\10请开启存储权限以保存所拍摄照片</string>
    <string name="access_file_taking_tips">请开启访问本地文件权限，开启后即可进行拍摄。</string>
    <string name="access_file_upload_tips">请开启访问本地文件权限，开启后即可上传。</string>
    <string name="add_picture_name">添加素材名</string>
    <string name="agree">同意</string>
    <string name="allow">确定</string>
    <string name="app_name">百度美拍3D</string>
    <string name="app_update_tips">当前版本过低，请升级到最新版本。</string>
    <string name="app_update_title">新版本升级</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asset_3d">环物素材</string>
    <string name="asset_created_sucess">作品创建成功</string>
    <string name="asset_is_saved">素材已保存</string>
    <string name="auto">自动</string>
    <string name="automatic_shoot">自动拍摄</string>
    <string name="banner_adapter_null_error">Banner setAdapter() 参数不能为空</string>
    <string name="banner_adapter_use_error">你还没有调用 setAdapter() 方法</string>
    <string name="battery_is_poor">相机电量不足，</string>
    <string name="battery_only">还剩</string>
    <string name="battery_percent">%电量</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="camera_no_working">相机异常</string>
    <string name="cancel">取消</string>
    <string name="capture_count_18">18</string>
    <string name="capture_count_36">36</string>
    <string name="capture_preview_reset">复位</string>
    <string name="capture_preview_rotate_360">拖拽物体\10查看360度图像</string>
    <string name="capture_tip">    请固定手机并保持水平    </string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_sd_card">请检查相机是否插卡。</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">关闭</string>
    <string name="cloudy_daylight">阴天</string>
    <string name="com.crashlytics.android.build_id">9149361a-2926-4bd1-9f9b-ceffeb759165</string>
    <string name="complete">完成</string>
    <string name="confirm">确认</string>
    <string name="connect_camera">连接相机</string>
    <string name="connect_device">连接设备</string>
    <string name="continue_picture_taking">继续拍摄</string>
    <string name="create_content_reason_no_enough_storage">由于账号空间不足，素材已\10上传，但作品创建失败。</string>
    <string name="create_task">创建作品</string>
    <string name="daylight">晴天</string>
    <string name="define_roundedimageview" />
    <string name="delete">删除</string>
    <string name="device_connect_error">连接失败</string>
    <string name="device_disconnect_tips">设备已断开\10请重新连接后再拍摄</string>
    <string name="device_head">请选择需要连接的拍照箱体</string>
    <string name="device_header">设备连接</string>
    <string name="device_rescan">重新搜索</string>
    <string name="device_searching">设备搜寻中</string>
    <string name="disagree">不同意</string>
    <string name="disconnect">断开连接</string>
    <string name="dsv_ex_msg_adapter_wrong_recycler">InfiniteScrollAdapter is supposed to work only with DiscreteScrollView</string>
    <string name="dsv_ex_msg_dont_set_lm">You should not set LayoutManager on DiscreteScrollView.class instance. Library uses a special one. Just don\'t call the method.</string>
    <string name="end_picture_taking">放弃拍摄</string>
    <string name="enter_picture_name">请输入素材名</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit">退出</string>
    <string name="exit_picture_taking">退出拍摄</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="finish_picture_taking">结束拍摄</string>
    <string name="fluorescent">日光灯</string>
    <string name="format">确定</string>
    <string name="free_up_space">请清理文件释放空间。</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hot_spot_collection">热点采集</string>
    <string name="hotspot_hint_describe">给图片添加详细说明，限200字</string>
    <string name="hotspot_hint_title">添加标题，限20字</string>
    <string name="i_know">知道了</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="if_retaking">是否重新拍摄该物件？</string>
    <string name="incandescent">白织灯</string>
    <string name="indicator_color_error">指示器的颜色只能设置成“@color/colorID or #000000”</string>
    <string name="indicator_null_error">请先调用setIndicator()方法来设置指示器</string>
    <string name="input">输入</string>
    <string name="iso_priority">ISO优先</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="make_sure_exit_picture_taking">确定要退出拍摄吗?</string>
    <string name="manual">手动</string>
    <string name="manual_shoot">手动拍摄</string>
    <string name="memory_full">手机内存已满</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="next">下一步</string>
    <string name="next_policy_prompt_content">请同意《服务协议》及《隐私政策》后再开始使用我们的服务</string>
    <string name="pass_bio_alert_dialog_btn_cancel">取消</string>
    <string name="pass_bio_alert_dialog_btn_ok">确定</string>
    <string name="pass_bio_alert_dialog_default_msg_text">提示</string>
    <string name="pass_bio_cancel">取消</string>
    <string name="pass_bio_pmn_cancel">关闭</string>
    <string name="pass_bio_pmn_ok">继续</string>
    <string name="pass_face_timeout_dialog_fail_reason">不佩戴眼镜</string>
    <string name="pass_face_timeout_dialog_fail_reason2">不遮挡脸部</string>
    <string name="pass_face_timeout_dialog_fail_reason3">不仰头俯拍</string>
    <string name="pass_face_timeout_dialog_msg">请避免以下操作，来提升刷脸成功率</string>
    <string name="picture_quality_no_tips">不再提示该信息</string>
    <string name="picture_quality_tips_one">为保障拍摄质量</string>
    <string name="picture_quality_tips_two">拍照时请将手机固定在箱体前方</string>
    <string name="policy_prompt">温馨提示</string>
    <string name="policy_prompt_content">欢迎使用百度VR·营销平台（包含百度美拍3D、编辑管理系统与展示SDK）！在你使用时，需要连接数据网络或者WLAN网络，产生的流量费用请咨询当地运营商。百度公司非常重视你的隐私保护和个人信息保护。在你使用百度VR·营销平台服务前，请认真阅读《服务协议》、《隐私政策》全部条款，你同意并接受全部条款后再开始使用我们的服务。 \10你可以使用百度VR·营销平台进行3D环物内容的采集、编辑、保存本地或分享他人等服务。我们可能会需要用到以下信息，你可以在设备系统或浏览器“设置”中进行相关权限信息管理。 \10为了实现3D环物素材上传等服务，我们会申请使用你的无线数据。当你连接采集硬件时，我们会读取你的蓝牙信息。当你拍摄、编辑3D环物内容时，我们会申请使用你的照片或相机信息。在向您提供安全的登录，会申请读取手机状态信息。 \10更多详细信息，请你点击查看完整版百度VR·营销平台《服务协议》及《隐私政策》。</string>
    <string name="sapi_sdk_alert_dialog_default_msg_text">提示</string>
    <string name="sapi_sdk_pmn_cancel">关闭</string>
    <string name="sapi_sdk_pmn_ok">继续</string>
    <string name="update">更新</string>
</resources>