<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/capture_guide_dialog_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/dialog_round_bg_shape" android:layout_width="296dp" android:layout_height="482dp">
        <TextView android:textSize="16sp" android:textColor="#ff000000" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="29dp" android:text="@string/picture_quality_tips_one"/>
        <TextView android:textSize="16sp" android:textColor="#ff000000" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/picture_quality_tips_two"/>
        <ImageView android:layout_width="224dp" android:layout_height="224dp" android:layout_marginTop="31dp" android:src="@mipmap/capture_guide"/>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp">
            <CheckBox android:id="@+id/checkbox" android:background="@drawable/checkbox_round_selector" android:layout_width="20dp" android:layout_height="20dp" android:checked="true" android:button="@null"/>
            <TextView android:textSize="12sp" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/picture_quality_no_tips" android:layout_marginStart="8dp"/>
        </LinearLayout>
        <Button android:textSize="16sp" android:textColor="#ffffffff" android:id="@+id/btn_confirm" android:tag="binding_1" android:background="@drawable/button_blue_selector" android:layout_width="162dp" android:layout_height="40dp" android:layout_marginTop="34dp" android:text="@string/i_know" style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>
</FrameLayout>
