<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/pass_liveness_dialog_bg" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25dp" android:layout_marginRight="25dp">
    <TextView android:textSize="18sp" android:textColor="@color/pass_bio_dialog_title_text_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/dialog_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_marginBottom="10dp" android:text="@string/pass_bio_alert_dialog_default_msg_text" android:lineSpacingMultiplier="1.2"/>
    <TextView android:textSize="16sp" android:textColor="@color/pass_bio_dialog_title_text_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/dialog_msg" android:paddingLeft="20dp" android:paddingRight="20dp" android:paddingBottom="20dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pass_bio_alert_dialog_default_msg_text" android:lineSpacingMultiplier="1.2"/>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@+id/time_out_dialog_msg" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/pass_bio_dialog_msg_text_size" android:textColor="#222222" android:gravity="center" android:layout_gravity="center" android:id="@+id/msg_text" android:paddingTop="6dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pass_face_timeout_dialog_msg" android:lineSpacingMultiplier="1.2"/>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textColor="#666666" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pass_face_timeout_dialog_fail_reason" android:drawableTop="@drawable/pass_face_timeout_reason1" android:drawablePadding="10dp" android:layout_weight="1"/>
            <TextView android:textColor="#666666" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pass_face_timeout_dialog_fail_reason2" android:drawableTop="@drawable/pass_face_timeout_reason2" android:drawablePadding="10dp" android:layout_weight="1"/>
            <TextView android:textColor="#666666" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pass_face_timeout_dialog_fail_reason3" android:drawableTop="@drawable/pass_face_timeout_reason3" android:drawablePadding="10dp" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView android:layout_width="match_parent" android:layout_height="1dp" android:src="@color/pass_bio_dialog_edit_hint_color"/>
    <ViewSwitcher android:id="@+id/view_switcher" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textSize="18sp" android:textColor="@color/pass_bio_dialog_negative_btn_text_color" android:id="@+id/negative_btn" android:background="@drawable/pass_liveness_dialog_background_opaque" android:padding="@dimen/pass_bio_standard_padding" android:layout_width="wrap_content" android:layout_height="44dp" android:layout_margin="@dimen/pass_bio_standard_margin" android:layout_marginRight="@dimen/pass_bio_standard_margin" android:text="@string/pass_bio_alert_dialog_btn_cancel" android:layout_weight="1"/>
            <ImageView android:background="@color/pass_liveness_separator_line_color" android:layout_width="1dp" android:layout_height="match_parent"/>
            <Button android:textSize="18sp" android:textColor="@color/pass_bio_dialog_positive_btn_text_color" android:id="@+id/positive_btn" android:background="@drawable/pass_liveness_dialog_background_opaque" android:padding="@dimen/pass_bio_standard_padding" android:layout_width="wrap_content" android:layout_height="44dp" android:layout_margin="@dimen/pass_bio_standard_margin" android:layout_marginLeft="@dimen/pass_bio_standard_margin" android:text="@string/pass_bio_alert_dialog_btn_ok" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18sp" android:textColor="@color/pass_bio_dialog_neutral_btn_text_color" android:gravity="center" android:id="@+id/neutral_btn" android:padding="@dimen/pass_bio_standard_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/pass_bio_standard_margin" android:text="@string/pass_bio_alert_dialog_btn_cancel"/>
        </LinearLayout>
    </ViewSwitcher>
</LinearLayout>
