<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/app_force_update_dialog_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:background="@drawable/dialog_round_bg_shape" android:paddingBottom="26dp" android:layout_width="280dp" android:layout_height="wrap_content">
        <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="#ff333333" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36dp" android:text="@string/app_update_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="13sp" android:textColor="#ff333333" android:gravity="center" android:id="@+id/tips" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="19dp" android:layout_marginRight="20dp" android:text="@string/app_update_tips" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title"/>
        <Button android:textSize="15sp" android:textColor="@color/white" android:tag="binding_1" android:background="@drawable/button_blue_selector" android:layout_width="208dp" android:layout_height="40dp" android:layout_marginTop="33dp" android:text="@string/update" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tips" style="@style/Widget.AppCompat.Button.Borderless"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
