<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:background="@android:color/white" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textSize="20dp" android:textColor="@color/pass_bio_edit_text_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/title_text" android:paddingTop="24dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/pass_bio_alert_dialog_default_msg_text" android:lineSpacingMultiplier="1.2"/>
    <TextView android:textSize="16dp" android:textColor="@color/pass_bio_dialog_msg_text_color" android:layout_gravity="center" android:id="@+id/msg_text" android:paddingTop="21dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/pass_bio_alert_dialog_default_msg_text" android:lineSpacingMultiplier="1.2"/>
    <ImageView android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="27dp" android:src="@color/pass_bio_edit_hint_color"/>
    <ViewSwitcher android:id="@+id/view_switcher" android:layout_width="match_parent" android:layout_height="42dp">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="18dp" android:textColor="@color/pass_bio_dialog_cancel_btn_color" android:gravity="center" android:id="@+id/negative_btn" android:background="@drawable/pass_liveness_dialog_btn_selector" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/pass_bio_pmn_cancel" android:layout_weight="1"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/sc_fingerprint_dialog_confirm_btn_splitter" android:background="@color/pass_bio_edit_hint_color" android:layout_width="1dp" android:layout_height="match_parent"/>
            <TextView android:textSize="18dp" android:textColor="@color/pass_bio_dialog_ok_btn_color" android:gravity="center" android:id="@+id/positive_btn" android:background="@drawable/pass_liveness_dialog_btn_selector" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/pass_bio_pmn_ok" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="18dp" android:textColor="@color/pass_bio_dialog_ok_btn_color" android:gravity="center" android:id="@+id/neutral_btn" android:background="@drawable/pass_liveness_dialog_btn_selector" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/pass_bio_cancel"/>
        </LinearLayout>
    </ViewSwitcher>
</LinearLayout>
