<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/dialog_round_bg_shape" android:layout_width="280dp" android:layout_height="190dp">
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="#ff000000" android:id="@+id/title" android:layout_width="280dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="148dp" android:text="@string/policy_prompt" android:textAlignment="center" android:layout_marginStart="104dp" android:layout_marginEnd="104dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
    <TextView android:textSize="14sp" android:textColor="#ff333333" android:id="@+id/content" android:layout_width="216dp" android:layout_height="58dp" android:layout_marginTop="40dp" android:text="@string/next_policy_prompt_content" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" android:textAlignment="center" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/title"/>
    <View android:background="#e0e0e0" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="140dp" android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.971"/>
    <Button android:textSize="16sp" android:textColor="#ff146ce1" android:id="@+id/btn_next" android:background="@android:color/transparent" android:focusable="true" android:clickable="true" android:layout_width="280dp" android:layout_height="50dp" android:layout_marginBottom="4dp" android:text="@string/next" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
