<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/dialog_round_bg_shape" android:layout_width="280dp" android:layout_height="374dp">
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="#000000" android:id="@+id/title" android:layout_width="280dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="332dp" android:text="@string/policy_prompt" android:textAlignment="center" android:layout_marginEnd="104dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
    <ScrollView android:scrollbarSize="3dp" android:scrollbarThumbVertical="@drawable/semitransparent_black_scrollbar" android:scrollbarStyle="outsideInset" android:id="@+id/scrollView" android:layout_width="232dp" android:layout_height="246dp" android:layout_marginTop="54dp" android:layout_marginBottom="74dp" android:fillViewport="true" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="12sp" android:id="@+id/content" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="0dp" android:layout_marginBottom="12dp" android:text="@string/policy_prompt_content" android:textAlignment="textStart" android:layout_marginStart="0dp" android:layout_marginEnd="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0" style="@style/UserGuideTitle"/>
        </LinearLayout>
    </ScrollView>
    <Button android:textSize="15sp" android:textColor="@drawable/button_round_white_text_color_selector" android:id="@+id/btn_disagree" android:background="@drawable/button_round_white_selector" android:layout_width="110dp" android:layout_height="34dp" android:layout_marginBottom="24dp" android:text="@string/disagree" android:textAllCaps="false" android:textAlignment="center" android:layout_marginStart="24dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="1" style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button android:textSize="15sp" android:textColor="#ffffffff" android:id="@+id/btn_agree" android:background="@drawable/button_blue_selector" android:layout_width="110dp" android:layout_height="34dp" android:layout_marginTop="316dp" android:layout_marginBottom="24dp" android:text="@string/agree" android:textAllCaps="false" android:textAlignment="center" android:layout_marginStart="146dp" android:layout_marginEnd="24dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="1" style="@style/Widget.AppCompat.Button.Borderless"/>
</androidx.constraintlayout.widget.ConstraintLayout>
